--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "@integration-app/react": "^2.1.3",
     "@integration-app/sdk": "^1.5.4",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.1",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "jose": "^5.9.6",
+    "jose": "^5.10.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.469.0",
     "mongoose": "^8.9.3",
